<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Edit_Exercise_Activity_Leg">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/EDIT_LEG"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNombreEjercicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Exercises_Name"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/etNombreEjercicio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/Exercises_Name"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreEjercicio" />

    <TextView
        android:id="@+id/tvRepeticiones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Reps"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/etNombreEjercicio"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/etRepeticiones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/Reps"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRepeticiones" />

    <TextView
        android:id="@+id/tvSeries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sets"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/etRepeticiones"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/etSeries"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/Sets"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSeries" />

    <TextView
        android:id="@+id/tvAñadirImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Add_Images"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/etSeries"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <RadioGroup
        android:id="@+id/rgImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tvAñadirImagen"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/rbImagenSi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Yes"/>

        <RadioButton
            android:id="@+id/rbImagenNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/No"/>
    </RadioGroup>

    <TextView
        android:id="@+id/tvAñadirCardio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/You_want_to_do_cardio"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/rgImagen"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <RadioGroup
        android:id="@+id/rgCardio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tvAñadirCardio"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/rbCardioSi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Yes"/>

        <RadioButton
            android:id="@+id/rbCardioNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/No"/>
    </RadioGroup>




    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgCardio">

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgCardio">

        <Button
            android:id="@+id/btnAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/Accept" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/Cancel" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/btnCancelar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        tools:ignore="NotSibling">

    </LinearLayout>

    <Button
        android:id="@+id/btnVerEjercicios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="85dp"
        android:text="@string/Show_Exercises"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnVerRutinas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/btnVerRutinas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="85dp"
        android:text="@string/Show_Routines"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnVerEjercicios"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>
